--- a/Index.html
+++ b/Index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
 
+    <!-- This is just a fake comment -->
   </head>
   <body>
     <header>
