--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!--font-->
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
 
     <!-- Styles -->
     <link rel="stylesheet" href="css/normalize.css">
@@ -17,30 +18,32 @@
   </head>
   <body>
     <header>
-      <a href="https://www.ironhack.com/en/courses/ux-ui-design-bootcamp-learn-ux-design/apply"target="_blank"><button type="button" name="button">Apply Now</button></a>
-      <img src="img/logo.png" alt="logo of Ironhack">
+      <a href="https://www.ironhack.com/en/courses/ux-ui-design-bootcamp-learn-ux-design/apply"target="_blank">
+      <button class="header-button" type="button" name="button">Apply Now</button>
+    </a>
+      <img src="img/logo.png" alt="logo of Ironhack"/>
     </header>
+
     <main>
-      <img src="img/squad.jpg" alt="Image of Ironhack Student on Desko's Rooftop">
+      <div class="cohort-picture"></div>
 
 <!--This section is about the differents types of bootcamp -->
 
-    <section id="bootcamp-program">>
+    <section id="bootcamp-program">
       <div class="intro-program">
           <h1>Discover the UX/UI Design Bootcamp</h1>
           <p>Become a UX/UI designer. Learn user-centered design applying the Design Thinking process and validate your ideas through user research, prototyping, user testing, and heuristic evaluation. Learn UI and IxD to prototype your solutions using visual and interaction design techniques. We offer this track in two modalities:</p>
+
+      <div class="card-program">
+        <p class="card-time">9 WEEKS // FULL-TIME</p>
+        <p class="card-title">Bootcamp Program</p>
+        <p class="card-schedule">Monday to Friday from<br />9:00 am to 6:00 pm</p>
       </div>
 
       <div class="card-program">
-        <p>9 WEEKS // FULL-TIME</p>
-        <p>Bootcamp Program</p>
-        <p>Monday to Frifay from<br />9:00 am to 6:00 pm</p>
-      </div>
-
-      <div class="card program">
-        <p>24 WEEKS // PART-TIME</p>
-        <p>Bootcamp Program</p>
-        <p>Monday & Wednesday from<br />6:30 pm to 9:30 pm<br /Saturday from 10am to 5pm </p>
+        <p class="card-time">24 WEEKS // PART-TIME</p>
+        <p class="card-title">Part-time Program</p>
+        <p class="card-schedule">Monday & Wednesday from<br />6:30 pm to 9:30 pm<br> Saturday from 10am to 5pm </p>
       </div>
 
       </section>
@@ -48,13 +51,21 @@
 <!-- This section is about bootcamp figures -->
       <section id="bootcamp-figures">
 
-        <h2>The Design Squad 103 in figures</h2>
+        <h2 class="figures-title">The Design Squad 103 in figures</h2>
 
         <div class="figures-wrapper">
-          <p>21 <span>students</span></p>
-          <p>3 <span>units</span></p>
-          <p>10 <span>weeks</span></p>
-          <p>6 <span>rojects</span></p>
+
+          <div class="figure">
+            21 <span>students</span></div>
+
+          <div class="figure">
+            3 <span>units</span></div>
+
+          <div class="figure">
+            10 <span>weeks</span></div>
+
+          <div class="figure">
+            6 <span>rojects</span></div>
         </div>
 
       </section>
